# trading-projects

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  Makefile  PLAN.md  README.md  REFACTORING_PLAN.md  nixpacks.toml  package.json  railway.toml  tsconfig.json
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BUILD_PLAN.md  DEPENDENCY_JUSTIFICATION.md  DEV_LOG.md  ORDER_BOOK.md  (+7 more)
programs/meridian/: Cargo.toml
programs/meridian/src/: error.rs  helpers.rs  lib.rs
programs/meridian/src/instructions/: accept_admin.rs  add_ticker.rs  admin_override_settlement.rs  admin_settle.rs  allocate_order_book.rs  cancel_order.rs  circuit_breaker.rs  cleanup_market.rs  close_market.rs  crank_cancel.rs  crank_redeem.rs  create_strike_market.rs  deactivate_ticker.rs  expand_config.rs  initialize_config.rs  initialize_ticker_registry.rs  mint_pair.rs  mod.rs  pause.rs  place_order.rs  redeem.rs  set_market_alt.rs  settle_market.rs  transfer_admin.rs  treasury_redeem.rs  unpause.rs  update_config.rs  update_fee_bps.rs  update_strike_creation_fee.rs  withdraw_fees.rs  withdraw_treasury.rs
programs/meridian/src/instructions/place_order/: escrow.rs  fill_processor.rs  mod.rs  stats.rs  validate.rs
programs/meridian/src/matching/: engine.rs
programs/meridian/src/state/: config.rs  events.rs  mod.rs  order_book.rs  strike_market.rs  ticker_registry.rs
programs/mock-oracle/: Cargo.toml
programs/mock-oracle/src/: error.rs  lib.rs
programs/mock-oracle/src/instructions/: initialize_feed.rs  mod.rs  update_price.rs
programs/mock-oracle/src/state/: mod.rs  price_feed.rs
(+339 files in other folders)
