[package]
name = "meridian"
version = "0.1.0"
description = "Binary stock outcome trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meridian"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = ["anchor-lang/init-if-needed"]
stress-test = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = { version = "1.14", features = ["derive"] }
