[package]
name = "mock-oracle"
version = "0.1.0"
description = "Mock oracle program for Meridian devnet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
